# plyr-rs

./: Cargo.toml  LICENSE-APATCH  README.md
dist_cdn/: main.js
examples/: define_option.rs  option_serialize.rs
examples/event-listener-example/: Cargo.toml  index.html  readme.md
examples/event-listener-example/src/: main.rs
examples/html5-example/: Cargo.toml  Trunk.toml  readme.md
examples/html5-example/server/: Cargo.toml  README.md
examples/html5-example/server/src/: main.rs
examples/html5-example/src/: main.rs
examples/intersection-player/: Cargo.toml  index.html  readme.md
examples/intersection-player/src/: main.rs
examples/plyr-dioxus-example/: index.html  readme.md
examples/plyr-dioxus-sample/: Cargo.toml  readme.md
examples/plyr-dioxus-sample/src/: main.rs
examples/plyr-leptos-example/: Cargo.toml  index.html  readme.md
examples/plyr-leptos-example/src/: main.rs
examples/plyr-sycamore-example/: Cargo.toml  index.html  readme.md
examples/plyr-sycamore-example/src/: main.rs
examples/plyr-yew-example/: Cargo.toml  index.html  readme.md
examples/plyr-yew-example/src/: main.rs
examples/simple-plyr-cdn-use/: Cargo.toml  index.html  readme.md
examples/simple-plyr-cdn-use/src/: main.rs
examples/simple-plyr-use/: Cargo.toml  index.html  readme.md
examples/sync-player/: Cargo.toml  index.html  readme.md
examples/sync-player/src/: main.rs
examples/with-options/: Cargo.toml  readme.md
examples/with-options/src/: main.rs
examples/youtube-statechange/: index.html  readme.md
examples/youtube-statechange/src/: main.rs
js_workspace/: README.md  cdn_webpack.config.js  package-lock.json  package.json  webpack.config.js
js_workspace/src/: index.js
src/: error.rs  events.rs  lib.rs  options.rs  plyr.rs  source.rs
src/options/: vimeo_options.rs  youtube_options.rs
