[package]
name = "plyr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
cdn = []
html5 = ["future"]
future = ["dep:wasm-bindgen-futures"]

[dependencies]
wasm-bindgen = "^0.2"
wasm-bindgen-futures = { version = "^0.4", optional = true }
js-sys = "^0.3"
typed-builder = "^0.11"
serde = { version = "^1.0", features = ["derive"] }
serde-wasm-bindgen = "^0.4"
strum = "^0.24"
strum_macros = "^0.24"
web-sys = { version = "^0.3", features = [
    "HtmlElement",
    "NodeList",
    "HtmlButtonElement",
    "CustomEvent",
] }
thiserror = "^1.0"


[dev-dependencies]
serde_json = "^1.0"
