[package]
name = "plyr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
cdn = []
html5 = ["future"]
options = ["dep:serde", "dep:serde-wasm-bindgen", "typed-builder"]
future = ["dep:wasm-bindgen-futures"]


[dependencies]
wasm-bindgen = "^0.2"
js-sys = "^0.3"
strum = "^0.24"
strum_macros = "^0.24"
web-sys = { version = "^0.3", features = [
    "HtmlElement",
    "NodeList",
    "HtmlButtonElement",
    "CustomEvent",
] }
thiserror = "^1.0"

# optional
wasm-bindgen-futures = { version = "^0.4", optional = true }
typed-builder = { version = "^0.11", optional = true }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "^0.4", optional = true }


[dev-dependencies]
