[package]
name = "dioxus_simple_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web"] }
plyr = { path = "../.." }
gloo-intersection = { git = "https://github.com/deepgreenAN/intersection-wrapper" }
gloo-utils = "0.1.6"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["HtmlElement"] }


[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
