[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.6" }
tokio = { version = "^1.0", features = ["full"] }
tower-http = { version = "^0.3", features = ["fs"] }
